Update emacs config and init.el

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                     <hr>
                     <p>Project layout and naming convention for files and folders. <a href="resources/project-layout.html">Details</a></p>
                     <p>Python setup and configuration guide. <a href="resources/python-conf.html">Details</a></p>
-                    <p>Emacs <a href="resources/emacs-config.html">configuration</a> file and <a href="resources/init_20170706.txt">.emacs</a> file</p>
+                    <p>Emacs <a href="resources/emacs-config.html">configuration</a> file and <a href="resources/emacs-init.txt">.emacs</a> file</p>
                     <p>Sublime Text 3 configuration guide. <a href="resources/sublime-setup.html">Details</a></p>
                     <p>Use Git in local environment. <a href="resources/git-tutorial.html">Details</a></p>
                     <p>Simple Mallet commands. <a href="resources/mallet-commands.html">Details</a></p>
