--- a/resources/emacs-config.html
+++ b/resources/emacs-config.html
@@ -1095,4 +1095,9 @@ body .markdown-body
 <li>install <em>aspell</em> on <a href="https://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/#step-2">Mac OS</a> with <a href="http://macappstore.org/ispell/">homebrew</a> <code>brew install aspell</code> or <a href="https://www.emacswiki.org/emacs/AspellWindows">Windows</a></li>
 <li>setup <em>.emacs</em> file, see <a href="https://www.emacswiki.org/emacs/AspellWindows">this site</a></li>
 <li><code>M-$</code> checks for single word, <code>C-f6</code> enables <em>flyspell</em> mode</li>
+</ol>
+<h2 id="git-gutter"><a name="user-content-git-gutter" href="#git-gutter" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Git-gutter</h2>
+<ol>
+<li>install <em>git-gutter</em> via MELPA <code>M-x package-install RET git-gutter</code></li>
+<li>add a line to <em>.emacs</em> to enable git-gutter <code>(global-git-gutter-mode +1)</code></li>
 </ol></article></body></html>
