--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Contact - Zhizun Zhang - Columbia University</title>
+    <title>Contact - Zhizun Zhang </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
 <body>
 
     <div class="brand">Zhizun Zhang</div>
-    <div class="address-bar">500 W. 120th Street, Mudd 282 | New York, NY 10027 </div>
+    <div class="address-bar">Shanghai, China | New York, NY </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -60,7 +60,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Project</a>
+                        <a href="project.html">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -89,20 +89,30 @@
                 </div>
                 <div class="col-md-4">
                     <p>Email:
-                        <strong><a href="mailto:name@example.com">zz2216 at columbia.edu</a></strong>
+                        <strong><a href="mailto:name@example.com">zhizunzhang13 at gmail.com</a></strong>
                     </p>
                     <p>Address: </p>
+                    <!--
+                    <p> <strong>浦东南路528号
+                            <br>证券大厦</strong>
+                            <br>上海，中国，200120</strong>
+                    </p>
+                    -->
                     <p> <strong>500 W. 120th Street
-                            <br> Mudd 282
                             <br>New York, NY 10027</strong>
                     </p>
                     <p>
                         <ul class="list-inline">
+                            <!--
                             <li>
                                 <a href="https://www.facebook.com/albert.z.zhang" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
+                            -->
                             <li>
                                 <a href="https://www.linkedin.com/pub/zhizun-zhang/28/a29/643" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/zazhang" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </p>
@@ -155,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Columbia University 2017</p>
+                    <p>Copyright &copy; Zhizun Zhang 2018</p>
                 </div>
             </div>
         </div>
