--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Zhizun Zhang - Columbia University</title>
+    <title>Home - Zhizun Zhang</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Zhizun Zhang</div>
-    <div class="address-bar">500 W. 120th Street, Mudd 282 | New York, NY 10027</div>
+    <div class="address-bar">Shanghai, China | New York, NY </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -59,7 +59,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Project</a>
+                        <a href="project.html">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -115,14 +115,15 @@
                     <h1 class="brand-name">Zhizun</h1>
                     <hr class="tagline-divider">
                     <h2>
-                        <small>A
-                            <strong>PhD Candidate</strong> of Columbia University
+                        <small>An
+                            <strong>Active Learner</strong> and <strong>Researcher</strong>
                         </small>
                     </h2>
                 </div>
             </div>
         </div>
 
+        <!-- 
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -135,8 +136,8 @@
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-left" src="img/cris.png" alt="">
                     <hr class="visible-xs">
-                    <p class="text-left">I'm working with <a href="http://cheme.columbia.edu/venkat-venkatasubramanian">Prof. Venkat Venkatasubramanian</a> in the <a href="http://cris.cheme.columbia.edu/">Complex Resilient Intelligent Systems Lab</a>. My research focuses on modeling and analyzing systemic risk in complex sociotechnical systems.</p>
-                    <p class="text-left">Specifically, I'm applying systems engineering and process control principles to model multi-level sociotechnical systems, and using artificial intelligence techniques (e.g., machine learning, NLP, semantic reasoning, etc.) to analyze systemic risk.</p>
+                    <p class="text-left">I got my PhD from Columbia. My research focuses on modeling complex systems and analyzing systemic risk in complex sociotechnical systems.</p>
+                    <p class="text-left">Initially, I was trained as a chemical engineer, however, I was intrigued by the beauty of complex systems  applying systems engineering and process control principles to model multi-level sociotechnical systems, and using artificial intelligence techniques (e.g., machine learning, NLP, semantic reasoning, etc.) to analyze systemic risk.</p>
                     <br>
                     <br>
                     <br>
@@ -171,10 +172,11 @@
                     <br>
                     <video width="600" height="400" id="sampleMovie" src="resources/copa.mov" controls></video>
                     <!-- <a href="http://www.ivybond.us/" class="btn btn-default btn-lg">Read More</a> -->
-                    <hr>
+        <!--        <hr>
                 </div>
             </div>
         </div>
+        -->
 
     </div>
     <!-- /.container -->
@@ -183,7 +185,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Columbia University 2017</p>
+                    <p>Copyright &copy; Zhizun Zhang 2018</p>
                 </div>
             </div>
         </div>
