--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Project - Zhizun Zhang - Columbia University</title>
+    <title>Projects - Zhizun Zhang </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Zhizun Zhang</div>
-    <div class="address-bar">500 W. 120th Street, Mudd 282 | New York, NY 10027</div>
+    <div class="address-bar">Shanghai, China | New York, NY </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -59,7 +59,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="project.html">project</a>
+                        <a href="project.html">projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -73,7 +73,7 @@
 
     <div class="container">
 
-
+        <!--
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -148,10 +148,11 @@
                     <br>
                     <br>
                     <!-- <a href="#" class="btn btn-default btn-lg">Read More</a> -->
-                    <hr>
+        <!--        <hr>
                 </div>
             </div>
         </div>
+        -->
 
 
         <!--
@@ -196,7 +197,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Columbia University 2017</p>
+                    <p>Copyright &copy; Zhizun Zhang 2018</p>
                 </div>
             </div>
         </div>
