--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Zhizun Zhang - Columbia University</title>
+    <title>About - Zhizun Zhang</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Zhizun Zhang</div>
-    <div class="address-bar">500 W. 120th Street, Mudd 282 | New York, NY 10027</div>
+    <div class="address-bar">Shanghai, China | New York, NY </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -59,7 +59,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Project</a>
+                        <a href="project.html">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -86,47 +86,43 @@
                     <img class="img-responsive img-border-left" src="img/spartan.png" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>I'm a fifth year doctoral student in the Chemical Engineering Department of Columbia University.</p>
-                    <p>My reserach interests include quantitative modeling, data analysis, machine learning, risk management, and computer-aided knowledge management.</p>
-                    <p>Before <a href="http://www.columbia.edu">Columbia</a>, I received my bachelor's degree from University of Kentucky. Besides research, I work on my own start-up.</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">
-                        <strong>Publications</strong>
-                    </h2>
-                    <hr>
-                    <p>Richard Bookstaber, Paul Glasserman, Garud Iyengar, Yu Luo, Venkat Venkatsubramanian, Zhizun Zhang. Process Systems Engineering as a Modeling Paradigm for Analyzing Systemic Risk in Financial Networks. Journal of Investing. 24(2): pp. 147-162. 2015. <a href="http://financialresearch.gov/working-papers/files/OFRwp-2015-02-11-Process-Systems-Engineering-as-a-Modeling-Paradigm.pdf">Download</a>
+                    <p>
+                    I was a native Chinese and was educated in the U.S. Now I work in the financial industry in Shanghai.
                     </p>
-		    <p>Venkatasubramanian, V., Zhang, Z. (2016). TeCSMART: A Hierarchical Framework for Modeling and Analyzing Systemic Risk in Sociotechnical Systems. AIChE Journal. <a href="http://onlinelibrary.wiley.com/doi/10.1002/aic.15302/full">Download</a>
-		    </p>
+                    <p>
+                    Initially, I was trained as chemical engineer. But during the years of my Ph.D. study at Columbia, I have worked on systemic risk and complex system problems. These problems appear to be super interesting to me. Since then, my specilty has shifted towards systems engineering, AI, and finance.
+                    </p>
+                    <p>
+                    Now I conduct research mainly on understanding systemic risk and investigting how AI could transform systemic risk management.
+                    </p>
+                    <p>
+                    我是土生土长的中国人，在美国接受了高等教育。现在在上海从事金融工作。
+                    </p>
+                    <p>
+                    我最初接受的是化工工程师的教育，准备投身于化工行业。但在哥伦比亚大学读博期间，我接触系统性风险和复杂系统问题。这些问题激起了我的兴趣，我的专业知识也因此开始转向系统工程、人工智能和金融。
+                    </p>
+                    <p>
+                    我现在的主要研究方向是理解系统性风险以及探索人工智能在系统性风险管理中的应用。
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
 
-        <!--
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Tools (research sensitive, currently not available for public)</strong>
+                        <strong>Google Scholar</strong>
                     </h2>
                     <hr>
-                    <p>A small tool for drawing signed directed graph (SDG) and detecting loops, written in Python. <a href="https://github.com/godzaq/signed-directed-graph">GitHub</a> </p>
-                    <p>A public health document ontology. <a href="https://github.com/godzaq/PH-ontology">GitHub</a> </p>
+                    <p>See my <a href="https://scholar.google.com.hk/citations?user=dUp4EZgAAAAJ&hl=en">Google Scholar</a> page for the publication list.
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-        -->
 
         <div class="row">
             <div class="box">
@@ -136,14 +132,8 @@
                         <strong>Resources</strong>
                     </h2>
                     <hr>
-                    <p>Project layout and naming convention for files and folders. <a href="resources/project-layout.html">Details</a></p>
-                    <p>Python setup and configuration guide. <a href="resources/python-conf.html">Details</a></p>
                     <p>Emacs <a href="resources/emacs-config.html">configuration</a> file and <a href="resources/emacs-init.txt">.emacs</a> file</p>
-                    <p>Sublime Text 3 configuration guide. <a href="resources/sublime-setup.html">Details</a></p>
-                    <p>Use Git in local environment. <a href="resources/git-tutorial.html">Details</a></p>
-                    <p>Simple Mallet commands. <a href="resources/mallet-commands.html">Details</a></p>
-                    <p>Spin Model Checker configuration guide. <a href="resources/spin-conf.html">Details</a></p>
-                    <p><a href="http://brew.sh">Homebrew</a> for Mac OS X</p>
+                    <p>Spin Model Checker installation guide. <a href="resources/spin-conf.html">Details</a></p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -157,7 +147,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Columbia University 2017</p>
+                    <p>Copyright &copy; Zhizun Zhang 2018</p>
                 </div>
             </div>
         </div>
