--- a/about.html
+++ b/about.html
@@ -139,6 +139,23 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Related Websites</strong>
+                    </h2>
+                    <hr>
+                    <p> <a href="columbia.edu">Columbia University</a> </p>
+                    <p> <a href="cris.cheme.columbia.edu">Columbia CRIS Lab</a></p>
+                    <p> <a href="risk.columbia.edu">Columbia Center for the Management of Systemic Risk</a></p>
+
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
 
     </div>
     <!-- /.container -->
