Update main page

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Blog</a>
+          <a class="js-scroll-trigger" href="#blog">Blog</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#portfolio">Project</a>
+          <a class="js-scroll-trigger" href="#project">Project</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#contact">Contact</a>
@@ -58,7 +58,7 @@
         <h3 class="mb-5">
           <em>Welcome to My Website</em>
         </h3>
-        <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -68,9 +68,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>I'm a researcher working on systemic risk, complex system, and artificial intelligence.</h2>
-            <p class="lead mb-5">  </p> 
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#blog">My Blogs</a>
+            <h2>I'm a researcher</h2>
+            <p class="lead mb-5"> working on systemic risk, complex system, and artificial intelligence. I was trained as a chemical engineer. But during my Ph.D. study at Columbia, I was intrigued by systemic risk and complex system problems. Since then, my focus has shifted towards systems engineering, AI, and finance. Now I try to understand systemic risk and investigate how AI could transform systemic risk management in financial industry. </p>
           </div>
         </div>
       </div>
@@ -83,26 +82,27 @@
           <h3 class="text-secondary mb-0">Blog</h3>
           <h2 class="mb-5">Ideas and Tutorials</h2>
         </div>
+        <a class="btn btn-light btn-xl js-scroll-trigger" href="https://zazhang.github.io/blog">My Blogs</a>
+        <!--
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
+              <i class="icon-screen-desktop"></i>
             </span>
             <h4>
-              <strong>Responsive</strong>
+              <a class="btn btn-light btn-xl js-scroll-trigger" href="#">SVM in R Tutorial</a>
             </h4>
-            <p class="text-faded mb-0">blah blah</p>
+            <p class="text-faded mb-0">A beginner's Guide</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="icon-pencil"></i>
             </span>
             <h4>
-              <strong>Redesigned</strong>
+              <a class="btn btn-light btn-xl js-scroll-trigger" href="#">Temp</a>
             </h4>
             <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
           </div>
-          <!--
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="icon-like"></i>
@@ -123,9 +123,9 @@
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p>
           </div>
-          -->
         </div>
       </div>
+      -->
     </section>
 
 
@@ -225,7 +225,7 @@
           <!--
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
+              <i class="icon-social-email"></i>
             </a>
           </li>
           -->
