Update recent projects

--- a/index.html
+++ b/index.html
@@ -148,30 +148,32 @@
           <h3 class="text-secondary mb-0">Project</h3>
           <h2 class="mb-5">Recent Projects</h2>
         </div>
-        <!--
+        
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/zazhang/quant-trading-begin">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                  <h2>Quantitative Trading</h2>
+                  <p class="mb-0">Recreate E.P. Chan's Algorithmic Trading Book</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
+              <img class="img-fluid" src="assets/img/code.jpg" alt="">
             </a>
           </div>
+          
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                  <h2>Place Holder</h2>
+                  <p class="mb-0">A simple place holder for future projects</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
+              <img class="img-fluid" src="assets/img/placeholder-2.jpg" alt="">
             </a>
           </div>
+          <!--
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
@@ -180,7 +182,7 @@
                   <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
+              <img class="img-fluid" src="assets/img/placeholder-3.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -191,11 +193,11 @@
                   <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
+              <img class="img-fluid" src="assets/img/placeholder-4.jpg" alt="">
             </a>
           </div>
+          -->
         </div>
-        -->
       </div>
     </section>
 
@@ -205,6 +207,7 @@
         <h2 class="mb-4">Useful resources...</h2>
         <a href="https://scholar.google.com.hk/citations?user=dUp4EZgAAAAJ&hl=en" class="btn btn-xl btn-dark mr-4">My Google Scholar</a>
         <a href="assets/resources/emacs-init.txt" class="btn btn-xl btn-dark">My Emacs Init</a>
+        <a href="assets/resources/tutorials.html" class="btn btn-xl btn-dark">My All-in-One Tutorial</a>
       </div>
     </section>
 
