--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
           </div>
           
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3008946">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Place Holder</h2>
-                  <p class="mb-0">A simple place holder for future projects</p>
+                  <h2>Systemic Risk</h2>
+                  <p class="mb-0">A Financial Statement based Systemic Risk Measure</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/placeholder-2.jpg" alt="">
+              <img class="img-fluid" src="assets/img/finance.jpg" alt="">
             </a>
           </div>
           <!--
