Update useful resources

--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
         <h2 class="mb-4">Useful resources...</h2>
-        <a href="assets/resources/emacs-init.txt" class="btn btn-xl btn-dark">My Emacs Init</a>
-        <a href="assets/resources/tutorial.html" class="btn btn-xl btn-dark">My All-in-One Tutorial</a>
+        <a href="https://gist.github.com/zazhang/3fcc181d2cac1788337a4a26a0953bfa" class="btn btn-xl btn-dark">My .Emacs</a>
+        <a href="https://gist.github.com/zazhang/e81a4b05b4c2462f3ee2774d6249ea86" class="btn btn-xl btn-dark">My Emacs Setup</a>
+        <a href="https://gist.github.com/zazhang/6c719ce6ff5ee9911ae698d947df5e64" class="btn btn-xl btn-dark">My All-in-One Tutorial</a>
         <a href="https://scholar.google.com.hk/citations?user=dUp4EZgAAAAJ&hl=en" class="btn btn-xl btn-dark mr-4">My Google Scholar</a>
       </div>
     </section>
