--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <div class="container text-center">
         <h2 class="mb-4">Useful resources...</h2>
         <a href="https://gist.github.com/zazhang/3fcc181d2cac1788337a4a26a0953bfa" class="btn btn-xl btn-dark">My .Emacs</a>
-        <a href="https://gist.github.com/zazhang/e81a4b05b4c2462f3ee2774d6249ea86" class="btn btn-xl btn-dark">My Emacs Setup</a>
+        <a href="https://gist.github.com/zazhang/4a8f0e600e433d654d239bb47dd4cbf3" class="btn btn-xl btn-dark">My MacOS Setup</a>
         <a href="https://gist.github.com/zazhang/6c719ce6ff5ee9911ae698d947df5e64" class="btn btn-xl btn-dark">My Super Cheatsheet</a>
         <a href="https://scholar.google.com.hk/citations?user=dUp4EZgAAAAJ&hl=en" class="btn btn-xl btn-dark mr-4">My Google Scholar</a>
       </div>
