--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.843837667897!2d-73.96004900000001!3d40.809425300000065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f63fdb160ecd%3A0x777223ae2b09f825!2s500+W+120th+St%2C+Columbia+University%2C+New+York%2C+NY+10027!5e0!3m2!1sen!2sus!4v1431634431747"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=%E4%B8%8A%E6%B5%B7%E8%AF%81%E5%88%B8%E5%A4%A7%E5%8E%A6&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
     </section>
 
     <!-- Footer -->
