--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=%E4%B8%8A%E6%B5%B7%E8%AF%81%E5%88%B8%E5%A4%A7%E5%8E%A6&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=South%20Pudong%20Road%20528%2C%20Shanghai%2C%20China+(Shanghai%20Stock%20Exchange)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"></iframe>
     </section>
 
     <!-- Footer -->
