Update description and projects

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>I'm a researcher</h2>
-            <p class="lead mb-5"> working on systemic risk, complex system, and artificial intelligence. I was trained as a chemical engineer. But during my Ph.D. study at Columbia, I was intrigued by systemic risk and complex system problems. Since then, my focus has shifted towards systems engineering, AI, and finance. Now I try to understand systemic risk and investigate how AI could transform systemic risk management in financial industry. </p>
+            <p class="lead mb-5"> working on systemic risk, behavioral finance, and artificial intelligence. I was trained as a chemical engineer. During my Ph.D. study at Columbia, I was intrigued by systemic risk and complex financial system problems. Since then, my focus has shifted towards AI, finance, and systems engineering. Now I focus on investigating how AI could transform systemic risk management in financial industry. </p>
           </div>
         </div>
       </div>
@@ -173,18 +173,19 @@
               <img class="img-fluid" src="assets/img/finance.jpg" alt="">
             </a>
           </div>
-          <!--
+          
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="http://www.columbia.edu/~zz2216/~sdg/index.html">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Strawberries</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                  <h2>Systemic Risk</h2>
+                  <p class="mb-0">Process Systems Engineering as a Modeling Paradigm for Analyzing Systemic Risk in Financial Networks</p>
                 </span>
               </span>
-              <img class="img-fluid" src="assets/img/placeholder-3.jpg" alt="">
+              <img class="img-fluid" src="assets/img/metal-network.jpg" alt="">
             </a>
           </div>
+          <!--
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
